--- a/docs/setupnotes.org
+++ b/docs/setupnotes.org
@@ -1,3 +1,3 @@
 Setting up.
 
-* NOTE  - <2020-07-26 Sun 11:00> - Looking at this stuff after a particulary long time, found our accidently that got supports org-mode files. So, here we go.
+* UPDATE  - <2020-07-26 Sun 18:43>- <2020-07-26 Sun 11:00> - Org isn't as nice as markdown for this. Looking at this stuff after a particulary long time, found out accidently that got supports org-mode files. So, here we go. - 
